
Styles and schemes:
 + The Specialists: Unlock game scheme
 + The Specialists: Add script parameter support to set custom specialists order
 * Balanced Random Weapon: Fix Lua errors after using Time Box
 * Racer: Fix racer ghost not getting reset after a skip
 * King Mode: Fix team sometimes not being killed properly if king drowned
 * King Mode: Kill resurrected minions if king is not alive

A Classic Fairytale:
 + Backstab: Disable utilities before traitor has been dealt with
 * Backstab: Prevent attacking the cannibals before making the choice
 * First blood: Fix Lua error when hitting Attack after failing the rope challenge
 * Various minor tweaks and bugfixes

A Space Adventure:
 + Show your current records at mission start when re-playing one of the challenges
 + Spacetrip: Move flowers of desert planet above cactus
 + Searching in the dust: Enable skip in entire mission
 * Searching in the dust: Fix mission ending when all smugglers are dead
 * Searching in the dust: Fix a lot of broken/stupid smuggler behaviours
 * Chasing the blue hog: Fix player not losing the race when timing out while still having the rope
 * Chasing the blue hog: Fix player winning if Crazy Runner died
 * Getting to the device: Fix clan colors
 * Various minor tweaks and bugfixes

Controls:
 + Add control to unselect current weapon (no key chosen by default)
 + Allow to leave a control unused
 + New chat command: “/help room” (shows room chat commands within the game)

Graphics:
 + Show contour of flying saucer when in highly opaque water
 + Remove visual clutter in cut scenes
 * Fix speech bubbles overlapping in the wrong order
 * Fix wrong ice beam angle if it goes diagonally up out of map through world wrap
 * Fix double water splash when flying saucer drowns

Game HUD:
 + Colorize switching arrows, pointing arrow and target cross in clan color
 + Skip ammo menu animation when playing with turn time of 10s or less
 + Don't show crate spawn message for initial crates in missions